fixed modal on mobile | no close button | added padding-bottom to have button show up

--- a/css/main.css
+++ b/css/main.css
@@ -697,6 +697,7 @@ button.navbar-toggle {
   margin-top: 30px;
   width: 100%;
   height: 100%;
+  min-height: 100%;
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.9);
@@ -707,17 +708,22 @@ button.navbar-toggle {
   margin: auto;
   display: block;
   width: 80%;
+  min-height: 100%;
 }
 
 @media only screen and (max-width: 700px) {
   .module-content {
     width: 100%;
+    height: 100%;
+    min-height: 100%;
   }
 }
 
 .module-footer {
+  z-index: 999;
   margin-top: 3em;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 .modalHeading {
